# oilprice

./: .env.example  .gitignore  README.md  README_EN.md  build.ps1  build.sh  config.yaml.example  main.spec  pyproject.toml
.github/workflows/: release.yml
build_test/: oilprice.spec
src/: main.py
src/oilprice/: __init__.py  __main__.py  adjustment_provider.py  config.py  date_resolver.py  formatter.py  main.py  notifier.py  parse_html.py  prediction.py  run.py  scraper.py  wechat_notify.py
tests/: conftest.py  test_adjustment_provider.py  test_config.py  test_date_resolver.py  test_formatter.py  test_notifier.py  test_prediction.py  test_scraper.py
