[project]
name = "oilprice"
version = "0.1.0"
description = ""
authors = [
    {name = "alblue",email = "hslixdu@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "wechatpy[cryptography] (>=1.8.18,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "oilprice", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
